# Revendu

./: .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRD.md  TESTING_GUIDE.md  docker-compose.yml  railway.toml
.claude/: settings.json  settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  INTEGRATION.md  TESTING.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b19dc5b5a54_add_gmail_sync_fields.py  3c1710ea9ea1_add_user_plan_stripe.py  62f8f38dad20_initial.py  a4e2c8d1f903_add_performance_indexes.py
backend/app/: config.py  database.py  main.py
backend/app/core/: deps.py  exceptions.py  logging_config.py  plan_guard.py  security.py
backend/app/models/: item.py  user.py
backend/app/routers/: auth.py  dashboard.py  export.py  import_router.py  items.py  payments.py  sync.py
backend/app/schemas/: auth.py  dashboard.py  item.py
backend/app/services/: auth_service.py  email_sync_service.py  export_service.py  item_service.py
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_export.py  test_import.py  test_isolation.py  test_items.py
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: revendu2026indexnow.txt
frontend/src/app/: globals.css  layout.tsx  (+3 more)
promo/facebook/: copy.md  script.md
promo/linkedin/: copy.md  script.md
promo/remotion-videos/: package.json  tsconfig.json
promo/tiktok/: copy.md  script.md
promo/youtube-shorts/: copy.md  script.md
(+58 files in other folders)
